[tool.poetry]
name = "greenofertas" 
version = "0.1.0" 
description = "" 
authors = ["Jefferson <seuemail@exemplo.com>"] 
 
[tool.poetry.dependencies] 
python = "^3.11" 
flask = "2.3.5" 
requests = "2.31.0" 
 
[build-system] 
requires = ["poetry-core"] 
build-backend = "poetry.core.masonry.api" 
